# Origin-Pro-MCP

./: .gitattributes  .gitignore  LICENSE  README.md  WORK_LOG.md  app.py  pyproject.toml  requirements.txt  server.py  test_server_stdio.py
docs/: REVIEW-2026-07-11-whole-product.md
docs/superpowers/plans/: 2026-07-10-styling-report-fixes.md
skills/: publication-figure.md
src/origin_pro_mcp/: __init__.py  app.py  autosave.py  cli.py  daemon.py  labtalk_safe.py  origin_connection.py  server.py  shim.py  skills.py  transport.py
src/origin_pro_mcp/palettes/: Cividis.pal  Inferno.pal  Magma.pal  PastelCividis.pal  PastelViridis.pal  Plasma.pal  Viridis.pal
src/origin_pro_mcp/skills/: labtalk-gotchas.md  publication-figure.md
src/origin_pro_mcp/tools/: analysis.py  fitting.py  graph.py  labtalk.py  matrix.py  project.py  style.py  style_helpers.py  worksheet.py
tests/: conftest.py  fakes.py  test_analysis.py  test_app.py  test_attach_mode.py  test_autosave.py  test_cli.py  test_connection.py  test_daemon.py  test_dispatch_timeout.py  test_dispatchers.py  test_doc_registry.py  test_enum_hardening.py  test_fitting.py  test_graph.py  test_graph_layers.py  test_integration.py  test_io.py  test_labtalk.py  test_labtalk_safe.py  test_legend_placement.py  test_lifecycle.py  test_list_worksheets_robust.py  test_live_analysis.py  test_live_colormap.py  test_live_dualy.py  test_live_export.py  test_live_fitting.py  test_live_import.py  test_live_loaded_graph.py  test_live_styling.py  test_live_template.py  test_live_worksheet.py  test_loaded_graph.py  test_matrix.py  test_mcp_stdio.py  test_periodic_autosave.py  test_plot_rgb.py  test_project.py  test_project_safety.py  (+18 more)
tools/: fitting.py  graph.py  labtalk.py  project.py  style.py  worksheet.py
